--- a/src/main/resources/templates/edit-info.html
+++ b/src/main/resources/templates/edit-info.html
@@ -34,6 +34,7 @@
                 <button type="submit">Bekræft</button>
             </form>
         </div>
+    </section>
 </main>
 
 <footer th:replace="fragments :: footer"></footer>
