--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -50,17 +50,30 @@
                               fill="#5B405F"/>
                     </svg>
                 </a></li>
+                <li>
+                    <a id="darkmode-btn" aria-pressed="false" aria-label="Toggle dark mode" onclick="toggleDarkMode()">
+                        <svg class="moon" viewBox="0 0 24 24" width="28" height="28" fill="none" stroke="currentColor"
+                             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z"/>
+                        </svg>
+                    </a>
+                </li>
             </ul>
         </nav>
+
+
+
 
     </div>
 </header>
 <body>
 
+<script src="/js/script.js"></script>
 </body>
 <footer th:fragment="footer">
     <p>&copy; 2025 Icy Cupcakes <br/>
         Bornholm Pederskervejen 17 ???? Nexø <br/>
         Telefon: +45 18131123</p>
+    <script src="/js/script.js"></script>
 </footer>
 </html>
